--- a/E111/index.html
+++ b/E111/index.html
@@ -31,6 +31,6 @@
 </head>
 <body>
   <h1>هدیه‌ی تو اینجاست :)</h1>
-  <img src="photo.PNG" alt="کادوی اختصاصی" />
+  <img src="photo111.JPG" alt="کادوی اختصاصی" />
 </body>
 </html>
