--- a/E111/index.html
+++ b/E111/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <h1>هدیه‌ی تو اینجاست :)</h1>
+  <h1>Just closed a deal. What's next?</h1>
   <img src="photo111.jpg" alt="کادوی اختصاصی" />
 </body>
 </html>
