--- a/E112/index.html
+++ b/E112/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <h1>Just closed a deal. What's next?</h1>
+  <h1>Plotting World Domination; After TEA :)</h1>
   <img src="photo112.jpg" alt="کادوی اختصاصی" />
 </body>
 </html>
