--- a/E112/index.html
+++ b/E112/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>آرش</title>
+  <title>محمدرضا</title>
   <style>
     body {
       font-family: sans-serif;
