--- a/E113/index.html
+++ b/E113/index.html
@@ -1,2 +1,36 @@
-<H1>سلام محسن عزیزم .. خوش اومدی </H1>
-<p>این صفحه برای توعه :)</p>
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>محسن</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 2rem;
+      margin: 0;
+      background-color: #f5f5f5;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 16px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      margin-top: 1rem;
+    }
+    h1 {
+      text-align: center;
+      font-size: 1.8rem;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <h1>Lunatic is watching you</h1>
+  <img src="photo113.jpg" alt="کادوی اختصاصی" />
+</body>
+</html>
