--- a/E115/index.html
+++ b/E115/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <h1>ـJust do it girl</h1>
+  <h1>Just do it girl</h1>
   <img src="photo115.jpg" alt="کادوی اختصاصی" />
 </body>
 </html>
